--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="index.js"></script>
 </head>
+<script src="http://c.fqtag.com/tag/implement-r.js?org=BB6DvPmytpFndg8atDcN&p=[REFERRER]&a=[USER_AGENT]&cmp=[YOURNAME]&fmt=banner&rt=display&sl=1&fq=1" ></script>
 <body>
     <div id="main-content">
-
     </div>
+    <button onclick="myFunction()">111</button>
+    <p id="demo"></p>
 </body>
 </html>
