--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Github Page demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
@@ -11,7 +12,7 @@
 <body>
     <div id="main-content">
     </div>
-    <button onclick="myFunction()">111</button>
+    <button onclick="myFunction()">点击获取信息</button>
     <p id="REFERRER"></p>
     <p id="USER_AGENT"></p>
     <p id="model"></p>
