添加广告模块

--- a/index.html
+++ b/index.html
@@ -30,5 +30,23 @@
     <p id="USER_AGENT"></p>
     <p id="model"></p>
     <p id="YOURNAME"></p>
+
+    <iframe name="tbody" id="iFrame" img src="./jpg/123.jpg"   style="width:100%;height:100%;border:none;" >
+    </iframe>
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8814329634316995"
+      crossorigin="anonymous"></script>
+    <!-- 广告demo -->
+    <ins class="adsbygoogle"
+      style="display:block"
+      data-ad-client="ca-pub-8814329634316995"
+      data-ad-slot="7663276483"
+      data-ad-format="auto"
+      data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      (setit())
+    </script>
+
 </body>
 </html>
